@@ -1,26 +1,24 @@
 package uk.gov.hmcts.reform.sscs.controller;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.equalTo;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static org.mockito.MockitoAnnotations.openMocks;
 import static uk.gov.hmcts.reform.sscs.service.SubmitAppealServiceBase.DM_STORE_USER_ID;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.TreeNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.Collections;
 import java.util.List;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.Before;
+import org.junit.Test;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.ResponseEntity;
-import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
 import uk.gov.hmcts.reform.ccd.document.am.model.Classification;
+import uk.gov.hmcts.reform.document.domain.Document;
 import uk.gov.hmcts.reform.document.domain.UploadResponse;
 import uk.gov.hmcts.reform.sscs.exception.EvidenceDocumentsMissingException;
 import uk.gov.hmcts.reform.sscs.exception.FileToPdfConversionException;
@@ -30,117 +28,94 @@ import uk.gov.hmcts.reform.sscs.service.EvidenceManagementSecureDocStoreService;
 import uk.gov.hmcts.reform.sscs.service.EvidenceManagementService;
 import uk.gov.hmcts.reform.sscs.service.conversion.FileToPdfConversionService;
 
-@ExtendWith(MockitoExtension.class)
+
 public class EvidenceManagementControllerTest {
 
     @Mock
     private EvidenceManagementService evidenceManagementService;
+
     @Mock
     private EvidenceManagementSecureDocStoreService evidenceManagementSecureDocStoreService;
+
     @Mock
     private IdamService idamService;
+
     @Mock
     private FileToPdfConversionService fileToPdfConversionService;
 
     private EvidenceManagementController controller;
 
-    @BeforeEach
+    @Before
     public void setUp() {
-        controller = new EvidenceManagementController(evidenceManagementService,
-                evidenceManagementSecureDocStoreService, fileToPdfConversionService, false, null);
+        openMocks(this);
+        controller = new EvidenceManagementController(evidenceManagementService, evidenceManagementSecureDocStoreService, fileToPdfConversionService, false, null);
     }
 
-    @Test
-    public void shouldThrowEvidenceDocumentsMissingExceptionIfThereAreNoFilesInTheRequest() {
-        assertThrows(EvidenceDocumentsMissingException.class, () -> controller.upload(null));
+    @Test(expected = EvidenceDocumentsMissingException.class)
+    public void shouldThrowEvidenceDocumentsMissingExceptionIfThereAreNoFilesInTheRequest() throws JsonProcessingException {
+        controller.upload(null);
     }
 
-    @Test
-    public void shouldThrowEvidenceDocumentsMissingExceptionForEmptyFileList() {
-        assertThrows(EvidenceDocumentsMissingException.class, () -> controller.upload(Collections.emptyList()));
+    @Test(expected = EvidenceDocumentsMissingException.class)
+    public void shouldThrowEvidenceDocumentsMissingExceptionForEmptyFileList() throws JsonProcessingException {
+        controller.upload(Collections.emptyList());
     }
 
     @Test
     public void shouldUploadEvidenceDocumentList() throws JsonProcessingException {
-        final String jsonPayload = """
-                {
-                    "_embedded": {
-                      "documents": [
-                        {
-                          "classification": null,
-                          "size": 656,
-                          "mimeType": "application/pdf",
-                          "originalDocumentName": "docname",
-                          "createdBy": null,
-                          "modifiedOn": null,
-                          "createdOn": null,
-                          "_links": {
-                            "self": {"href": "selfURL"},
-                            "binary": {"href": "binaryUrl"}
-                          }
-                        }
-                      ]
-                    }
-                }
-                """;
+        UploadResponse uploadResponse = mock(UploadResponse.class);
+        UploadResponse.Embedded uploadResponseEmbedded = mock(UploadResponse.Embedded.class);
 
-        UploadResponse uploadResponse = new ObjectMapper().readValue(jsonPayload, UploadResponse.class);
+        when(uploadResponse.getEmbedded()).thenReturn(uploadResponseEmbedded);
+        Document document = new Document();
+        document.mimeType = "application/pdf";
+        document.size = 656;
+        document.originalDocumentName = "docname";
+        Document.Links links = new Document.Links();
+        links.binary = new Document.Link();
+        links.self = new Document.Link();
+        links.binary.href = "binaryUrl";
+        links.self.href = "selfURL";
+        document.links = links;
 
-        List<MultipartFile> files = List.of(new MockMultipartFile("file", "file".getBytes()));
+        when(uploadResponse.getEmbedded().getDocuments()).thenReturn(Collections.singletonList(document));
+        MultipartFile file = mock(MultipartFile.class);
+        List<MultipartFile> files = Collections.singletonList(file);
         when(fileToPdfConversionService.convert(files)).thenReturn(files);
         when(evidenceManagementService.upload(files, DM_STORE_USER_ID)).thenReturn(uploadResponse);
 
         ResponseEntity<String> actualUploadResponseEmbedded = controller.upload(files);
 
+        String json = "{\"documents\": [{\"classification\":null,\"size\":656,\"mimeType\":\"application/pdf\",\"originalDocumentName\":\"docname\",\"createdBy\":null,\"modifiedOn\":null,\"createdOn\":null,\"_links\":{\"self\":{\"href\":\"selfURL\"},\"binary\":{\"href\":\"binaryUrl\"}}}]}";
+
         verify(evidenceManagementService, times(1)).upload(files, DM_STORE_USER_ID);
-        assertEquals(getJsonObj(jsonPayload).get("_embedded"), getJsonObj(actualUploadResponseEmbedded.getBody()));
+        assertThat(actualUploadResponseEmbedded.getBody(), equalTo(json));
     }
 
     @Test
-    public void shouldUploadEvidenceDocumentListSecureDocStore() throws Exception {
-        controller =
-                new EvidenceManagementController(evidenceManagementService, evidenceManagementSecureDocStoreService,
-                        fileToPdfConversionService, true, idamService);
-        final String json = """
-                  { "documents":
-                    [
-                        {
-                          "classification": "PUBLIC",
-                          "size": 656,
-                          "mimeType": "application/pdf",
-                          "originalDocumentName": "docname",
-                          "createdOn": null,
-                          "modifiedOn": null,
-                          "createdBy": null,
-                          "lastModifiedBy": null,
-                          "ttl": null,
-                          "hashToken": null,
-                          "metadata": null,
-                          "_links": {
-                            "self": {"href": "selfURL"},
-                            "binary": {"href": "binaryUrl"}
-                          }
-                        }
-                    ]
-                  }
-                """;
+    public void shouldUploadEvidenceDocumentListSecureDocStore() throws JsonProcessingException {
+        controller = new EvidenceManagementController(evidenceManagementService, evidenceManagementSecureDocStoreService, fileToPdfConversionService, true, idamService);
 
-        var links = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Links();
+        uk.gov.hmcts.reform.ccd.document.am.model.Document.Links links = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Links();
         links.binary = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Link();
         links.self = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Link();
         links.binary.href = "binaryUrl";
         links.self.href = "selfURL";
 
-        var document = uk.gov.hmcts.reform.ccd.document.am.model.Document.builder()
-                .size(656L)
-                .mimeType("application/pdf")
-                .originalDocumentName("docname")
-                .classification(Classification.PUBLIC)
-                .links(links)
-                .build();
+        uk.gov.hmcts.reform.ccd.document.am.model.Document document =
+                uk.gov.hmcts.reform.ccd.document.am.model.Document.builder()
+                        .size(656L)
+                        .mimeType("application/pdf")
+                        .originalDocumentName("docname")
+                        .classification(Classification.PUBLIC)
+                        .links(links)
+                        .build();
 
-        var uploadResponse = new uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse(List.of(document));
-        List<MultipartFile> files = List.of(new MockMultipartFile("file", "file".getBytes()));
+        uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse uploadResponse =
+                mock(uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse.class);
+        when(uploadResponse.getDocuments()).thenReturn(Collections.singletonList(document));
+        MultipartFile file = mock(MultipartFile.class);
+        List<MultipartFile> files = Collections.singletonList(file);
         when(fileToPdfConversionService.convert(files)).thenReturn(files);
 
         IdamTokens idamTokens = IdamTokens.builder().build();
@@ -150,22 +125,21 @@ public class EvidenceManagementControllerTest {
 
         ResponseEntity<String> actualUploadResponseEmbedded = controller.upload(files);
 
+        String json = "{\"documents\": [{\"classification\":\"PUBLIC\",\"size\":656,\"mimeType\":\"application/pdf\",\"originalDocumentName\":\"docname\",\"createdOn\":null,\"modifiedOn\":null,\"createdBy\":null,\"lastModifiedBy\":null,\"ttl\":null,\"hashToken\":null,\"metadata\":null,\"_links\":{\"self\":{\"href\":\"selfURL\"},\"binary\":{\"href\":\"binaryUrl\"}}}]}";
 
         verify(evidenceManagementSecureDocStoreService, times(1)).upload(files, idamTokens);
-        assertEquals(getJsonObj(json), getJsonObj(actualUploadResponseEmbedded.getBody()));
+        assertThat(actualUploadResponseEmbedded.getBody(), equalTo(json));
     }
 
-    @Test
-    public void shouldUploadEvidenceDocumentListLogsParseException() {
-        List<MultipartFile> files = List.of(new MockMultipartFile("file1", "file1".getBytes()));
+    @Test(expected = FileToPdfConversionException.class)
+    public void shouldUploadEvidenceDocumentListLogsParseException() throws JsonProcessingException {
+
+        MultipartFile file = mock(MultipartFile.class);
+        List<MultipartFile> files = Collections.singletonList(file);
 
         when(fileToPdfConversionService.convert(files)).thenThrow(
             new FileToPdfConversionException("Conversion to PDF error", new RuntimeException()));
 
-        assertThrows(FileToPdfConversionException.class, () -> controller.upload(files));
-    }
-
-    private TreeNode getJsonObj(String expectedJson) throws JsonProcessingException {
-        return new ObjectMapper().readTree(expectedJson);
+        controller.upload(files);
     }
 }
